Create an UI to the code.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
+    <h3 id="player-chooses">Choose your rooster(XD): </h3>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <h3 id="computer-chooses">Computer chooses: </h3>
+
+
+    <h2 id="STATS">STATS</h2>
+    <div>  
+        <p><b>Scores</b></p>
+    </div>
+
     
 </body>
 </html>
